# waycore-bank-scraper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  alembic.ini  cli.py  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  restate-config.toml  vulture_whitelist.py
.claude/commands/: review.md  style.md
.githooks/: pre-push
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_account_sync_results.py  003_url_normalization_and_indexes.py  004_deduplicate_connections.py  005_add_api_keys.py
deploy/: ecs-service-spot.json  ecs-task-definition-api.json  ecs-task-definition.json
deploy/cdk/: app.py  cdk.json  waycore_stack.py
docs/: ecs-cost-analysis.md
memory/: MEMORY.md  build_state.md  decisions.md  project_waycore.md  user_prefs.md
scripts/: stress_test.py
src/adapters/: __init__.py  base.py  generic.py  generic_bank_adapter.py  heritage.py  heritage_bank_adapter.py  heritage_parsers.py
src/agent/: extractor.py  llm.py
src/api/: app.py  auth.py  schemas.py
src/bank_adapters/: __init__.py  base.py
src/browser/: screenshots.py  stealth.py
src/core/: config.py  crypto.py  logging.py  metrics.py  operations.py  screenshots.py  stealth.py  urls.py
src/db/: models.py  queries.py  session.py
src/services/: operations.py
src/worker/: app.py  concurrency.py  steps.py  workflow.py
tests/: test_adapters.py  test_extractor.py  test_models.py
tests/integration/: conftest.py  test_api.py  test_failure_modes.py
tests/unit/: test_crypto.py  test_urls.py
(+14 files in other folders)
